--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <!-- Card 1 -->
             <div class="col-md-3 col-sm-6">
                 <div class="decor-card">
-                    <img src="img/home-decor-1.jpg" alt="Decor Item 1" class="decor-img">
+                    <img src="img/home-decor-1.png" alt="Decor Item 1" class="decor-img">
                     <h5 class="mt-3 text-center">Sofa Cover</h5>
                 </div>
             </div>
