--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="#">Furniture</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- Brand Logo -->
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="img/logo/logo.png" alt="Furniture Logo" class="img-fluid" style="max-height: 50px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -26,6 +30,7 @@
             </div>
         </div>
     </nav>
+    
 
     <!-- Slider Section -->
     <div id="slider" class="carousel slide" data-bs-ride="carousel">
@@ -113,11 +118,11 @@
     </div>
 </div> -->
 
-<div class="container-fluid" style="background-color: #fff;">
+<!-- <div class="container-fluid" style="background-color: #fff;">
     <div class="container">
         <img src="img/strip-furniture.jpg" alt="Hotel Furniture Banner" class="img-fluid rounded shadow">
     </div>
-</div>
+</div> -->
 
  <!-- India's Finest Online Furniture Brand Section -->
  <div class="container my-3 india-furniture">
